# whisper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: frpc.toml  frps.toml  nginx.conf  whisper.service
server/: .env.example  main.py  requirements.txt
server/app/: config.py
server/app/models/: database.py  schemas.py
server/app/routers/: auth.py  tasks.py  upload.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.vue
web/src/api/: index.ts
web/src/components/: AppLayout.vue  LogoIcon.vue  UploadDock.vue
web/src/pages/: Login.vue  Tasks.vue  Upload.vue
web/src/router/: index.ts
web/src/stores/: auth.ts  tasks.ts
windows/: .env.example  config.py  main.py
windows/models/: database.py  schemas.py
windows/routers/: auth.py  tasks.py  upload.py
